force-app/main/default/objects/Yatcht__c/Yatcht__c.object-meta.xml
<CustomObject>
    <description>guilet,motor boat,sailbot</description>
    <label>Yacht</label>
    <nameField>
        <label>Yatcht Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yachts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>