force-app/main/default/objects/Yatcht__c/fields/arrival_marine__c.field-meta.xml
<CustomField>
    <fullName>arrival_marine__c</fullName>
    <label>arrival marine</label>
    <length>10</length>
    <type>Text</type>
</CustomField>