force-app/main/default/objects/Yatcht__c/fields/bath__c.field-meta.xml
<CustomField>
    <fullName>bath__c</fullName>
    <defaultValue>0</defaultValue>
    <label>bath</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>