force-app/main/default/objects/Yatcht__c/fields/boat_brand__c.field-meta.xml
<CustomField>
    <fullName>boat_brand__c</fullName>
    <label>boat brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dyna</fullName>
            </value>
            <value>
                <fullName>Ocean Explorer</fullName>
            </value>
            <value>
                <fullName>Bavaria</fullName>
            </value>
            <value>
                <fullName>Centurion</fullName>
            </value>
            <value>
                <fullName>Grandy</fullName>
            </value>
            <value>
                <fullName>Harris</fullName>
            </value>
            <value>
                <fullName>Bruce Nelson</fullName>
            </value>
            <value>
                <fullName>Hanse Yachts</fullName>
            </value>
            <value>
                <fullName>Ontario Yachts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>