force-app/main/default/objects/Yatcht__c/fields/Boat_Type__c.field-meta.xml
<CustomField>
    <fullName>Boat_Type__c</fullName>
    <label>Boat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gulet</fullName>
            </value>
            <value>
                <fullName>motorboat</fullName>
            </value>
            <value>
                <fullName>sailboat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>