force-app/main/default/objects/Yatcht__c/fields/BoatSize__c.field-meta.xml
<CustomField>
    <fullName>BoatSize__c</fullName>
    <label>BoatSize</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>