force-app/main/default/objects/Yatcht__c/fields/cabin__c.field-meta.xml
<CustomField>
    <fullName>cabin__c</fullName>
    <label>cabin</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>