force-app/main/default/objects/Yatcht__c/fields/call_sign__c.field-meta.xml
<CustomField>
    <fullName>call_sign__c</fullName>
    <label>call sign</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>