force-app/main/default/objects/Yatcht__c/fields/capaticy__c.field-meta.xml
<CustomField>
    <fullName>capaticy__c</fullName>
    <label>capaticy</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>