force-app/main/default/objects/Yatcht__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>