force-app/main/default/objects/Yatcht__c/fields/crewprice__c.field-meta.xml
<CustomField>
    <fullName>crewprice__c</fullName>
    <label>crewprice</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>