force-app/main/default/objects/Yatcht__c/fields/departure_marine__c.field-meta.xml
<CustomField>
    <fullName>departure_marine__c</fullName>
    <label>departure marine</label>
    <length>10</length>
    <type>Text</type>
</CustomField>