force-app/main/default/objects/Yatcht__c/fields/IMO__c.field-meta.xml
<CustomField>
    <fullName>IMO__c</fullName>
    <label>IMO</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>