force-app/main/default/objects/Yatcht__c/fields/latest_coordinate_latitude__c.field-meta.xml
<CustomField>
    <fullName>latest_coordinate_latitude__c</fullName>
    <label>latest coordinate latitude</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>