force-app/main/default/objects/Yatcht__c/fields/ship_owner__c.field-meta.xml
<CustomField>
    <fullName>ship_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ship owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Yachts</relationshipLabel>
    <relationshipName>Yachts</relationshipName>
    <type>Lookup</type>
</CustomField>