force-app/main/default/objects/Yatcht__c/fields/water_sports__c.field-meta.xml
<CustomField>
    <fullName>water_sports__c</fullName>
    <label>water sports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tender boat</fullName>
            </value>
            <value>
                <fullName>jet packs</fullName>
            </value>
            <value>
                <fullName>dive and snorkel gear</fullName>
            </value>
            <value>
                <fullName>seabots</fullName>
            </value>
            <value>
                <fullName>jetskis</fullName>
            </value>
            <value>
                <fullName>fishrod</fullName>
            </value>
            <value>
                <fullName>parasailing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>