force-app/main/default/objects/Yatcht__c/fields/wc__c.field-meta.xml
<CustomField>
    <fullName>wc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>wc</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>