force-app/main/default/objects/Yatcht__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>boat_brand__c</columns>
    <columns>Boat_Type__c</columns>
    <columns>BoatSize__c</columns>
    <columns>cabin__c</columns>
    <columns>call_sign__c</columns>
    <columns>Commission_Rate__c</columns>
    <columns>capaticy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>